[gd_scene load_steps=19 format=2]

[ext_resource path="res://tiles/world/stage_1/background/planet-2.png" type="Texture" id=1]
[ext_resource path="res://tiles/world/stage_1/background/ship.png" type="Texture" id=2]
[ext_resource path="res://scenes/Cutscene_Entrance.gd" type="Script" id=3]
[ext_resource path="res://sprite/object/AmmoBox.png" type="Texture" id=4]
[ext_resource path="res://tiles/world/stage_1/background/space_back.png" type="Texture" id=5]
[ext_resource path="res://sounds/Cutscene_Entrance_1.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/Cutscene_Entrance_2.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="PanoramaSky" id=8]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )
glow_enabled = true
glow_strength = 1.51
glow_bloom = 0.01
glow_blend_mode = 0

[sub_resource type="Animation" id=10]
length = 14.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Ship")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 2.86154, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Ship:transform")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8, 8.5, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86154, 0 ), Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86154, -6.39066 ), Transform( 0.830285, -0.557339, 0, 0.557339, 0.830285, 0, 0, 0, 1, 0, 2.86154, -7.02055 ), Transform( 0.526336, -0.850277, 0, 0.850277, 0.526336, 0, 0, 0, 1, 0, 2.86154, -8.85621 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ship:opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 12.1, 14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Cutscene_Entrance" type="Spatial"]
script = ExtResource( 3 )

[node name="Planet" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15557, 2.57389, -9.62258 )
texture = ExtResource( 1 )

[node name="Ship" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86154, 0 )
opacity = 0.842105
frames = SubResource( 7 )
frame = 1
playing = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.875245, 0, 0.48368, 0, 1, 0, -0.48368, 0, 0.875245, 1.59781, 3.02899, 2.29281 )
current = true

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
anims/Cutscene_Entrance = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 11 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 48.3557, 0, 0, 0, 91.4026, 0, 0, 0, 1, 0, 0.593294, 0.935964 )
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 4 )

[node name="Commander" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Player" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 6.737
[connection signal="animation_finished" from="CutscenePlayer" to="." method="_on_CutscenePlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="Player" to="." method="_on_Player_finished"]
